monitoring/giropops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-ingress
  namespace: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
    - host: giropops.pum
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-service
                port:
                  number: 5000
