monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.pum
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-kube-prome-prometheus
            port:
              number: 9090
